--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cryptiles": "^4.1.3",
     "form-serialize": "^0.7.2",
     "prop-types": "^15.6.1",
     "react": "^15.5.4",
