--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "cryptiles": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "form-serialize": "^0.7.2",
     "prop-types": "^15.6.1",
     "react": "^15.5.4",
