--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "devDependencies": {
     "react-router-dom": "^4.2.2",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
